--- a/src/app/routes/admin-hrm/add-employee/add-employee.component.html
+++ b/src/app/routes/admin-hrm/add-employee/add-employee.component.html
@@ -74,8 +74,8 @@
                 </mat-form-field>
             </div>
             <div class="button-action">
-                <button mat-raised-button style="background-color: #189ad6;" color="primary">
-                    
+                <button mat-raised-button style="background-color: #189ad6;"
+                routerLink="/hrm/view-employee" color="primary">
                     <mat-icon style="font-size: 20px;">fast_rewind</mat-icon>Back
                 </button>
                 <button mat-raised-button style="background-color: #d68a18; margin-left: 15px;"
