--- a/src/app/routes/admin-carpark/booking-office-management/booking-office-list/booking-office-list.component.html
+++ b/src/app/routes/admin-carpark/booking-office-management/booking-office-list/booking-office-list.component.html
@@ -1,1 +1,43 @@
-<p>booking-office-list works!</p>
+<div class="main-container">
+    <div class="header-title">
+        <h1>Booking office list</h1>
+    </div>
+    <hr />
+    <div class="search">
+        <mat-form-field style="width: 300px; margin-right: 15px;" appearance="outline">
+            <mat-icon matPrefix>search</mat-icon>
+            <input matInput type="search" placeholder="Booking office Search" class="search-input">
+        </mat-form-field>
+        <button mat-raised-button style="background-color: #189ad6;" color="primary">Search</button>
+    </div>
+    <div class="table-div">
+        <table mat-table [dataSource]="offices" class="mat-elevation-z8">
+            <ng-container matColumnDef="ID">
+                <th mat-header-cell *matHeaderCellDef>ID</th>
+                <td mat-cell *matCellDef="let element">{{element.id}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Booking office">
+                <th mat-header-cell *matHeaderCellDef>Booking office</th>
+                <td mat-cell *matCellDef="let element">{{element.bookingOffice}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Trip">
+                <th mat-header-cell *matHeaderCellDef>Trip </th>
+                <td mat-cell *matCellDef="let element">{{element.trip}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Action">
+                <th mat-header-cell *matHeaderCellDef>Action</th>
+                <td mat-cell *matCellDef="let element" style="cursor: pointer;">
+                    <p style="color: #189ad6;">
+                        <mat-icon style="font-size: 18px;">remove_red_eye</mat-icon>
+                        <span>View</span>
+                    </p>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="nameColumn"></tr>
+            <tr mat-row *matRowDef="let row; columns: nameColumn"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+            aria-label="Select page of periodic elements">
+        </mat-paginator>
+    </div>
+</div>
