--- a/src/app/routes/admin-carpark/car-management/car-list/car-list.component.html
+++ b/src/app/routes/admin-carpark/car-management/car-list/car-list.component.html
@@ -1,16 +1,48 @@
-<div class="example-container">
-    <mat-form-field appearance="fill">
-      <mat-label>Enter your password</mat-label>
-      <input matInput [type]="hide ? 'password' : 'text'">
-      <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-      </button>
-    </mat-form-field>
-  
-    <mat-form-field appearance="fill" floatLabel="always">
-      <mat-label>Amount</mat-label>
-      <input matInput type="number" class="example-right-align" placeholder="0">
-      <span matPrefix>$&nbsp;</span>
-      <span matSuffix>.00</span>
-    </mat-form-field>
-  </div>
+<div class="main-container">
+    <div class="header-title">
+        <h1>Car List</h1>
+    </div>
+    <hr />
+    <div class="table-div">
+        <table mat-table [dataSource]="cars" class="mat-elevation-z8">
+            <ng-container matColumnDef="License plate">
+                <th mat-header-cell *matHeaderCellDef>License plate</th>
+                <td mat-cell *matCellDef="let element">{{element.licensePlate}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Car type">
+                <th mat-header-cell *matHeaderCellDef>Car type</th>
+                <td mat-cell *matCellDef="let element">{{element.carType}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Car color">
+                <th mat-header-cell *matHeaderCellDef>Car color</th>
+                <td mat-cell *matCellDef="let element">{{element.carColor}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Company">
+                <th mat-header-cell *matHeaderCellDef>Company</th>
+                <td mat-cell *matCellDef="let element">{{element.company}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Parking lot">
+                <th mat-header-cell *matHeaderCellDef>Parking lot</th>
+                <td mat-cell *matCellDef="let element">{{element.parkingLotName}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Action">
+                <th mat-header-cell *matHeaderCellDef style="width: 200px;">Action</th>
+                <td mat-cell *matCellDef="let element" style="color: #189ad6;">
+                    <p style="cursor: pointer;">
+                        <mat-icon style="font-size: 20px;">edit</mat-icon>
+                        <span>Edit</span>
+                    </p>
+                    <p style="cursor: pointer">
+                        <mat-icon style="font-size: 20px;">delete</mat-icon>
+                        <span>Delete</span>
+                    </p>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="nameColumn"></tr>
+            <tr mat-row *matRowDef="let row; columns: nameColumn"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+            aria-label="Select page of periodic elements">
+        </mat-paginator>
+    </div>
+</div>
