--- a/src/app/routes/admin-carpark/parking-lot-management/parking-lot-list/parking-lot-list.component.html
+++ b/src/app/routes/admin-carpark/parking-lot-management/parking-lot-list/parking-lot-list.component.html
@@ -1,1 +1,59 @@
-<p>parking-lot-list works!</p>
+<div class="main-container">
+    <div class="header-title">
+        <h1>Parking lot list</h1>
+    </div>
+    <hr/>
+    <!-- <div class="search">
+        <mat-form-field style="width: 300px; margin-right: 15px;" appearance="outline">
+            <mat-icon matPrefix>search</mat-icon>
+            <input matInput type="search" placeholder="User Search" class="search-input">
+        </mat-form-field>
+        <button mat-raised-button style="background-color: #189ad6;" color="primary">Search</button>
+    </div> -->
+    <div class="table-div">
+        <table mat-table [dataSource]="parks" class="mat-elevation-z8">
+            <ng-container matColumnDef="ID">
+                <th mat-header-cell *matHeaderCellDef>ID</th>
+                <td mat-cell *matCellDef="let element">{{element.id}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Parking lot">
+                <th mat-header-cell *matHeaderCellDef>Parking lot</th>
+                <td mat-cell *matCellDef="let element">{{element.parkingLot}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Place">
+                <th mat-header-cell *matHeaderCellDef>Place</th>
+                <td mat-cell *matCellDef="let element">{{element.place}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Area">
+                <th mat-header-cell *matHeaderCellDef>Area</th>
+                <td mat-cell *matCellDef="let element">{{element.area}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Price">
+                <th mat-header-cell *matHeaderCellDef>Price</th>
+                <td mat-cell *matCellDef="let element">{{element.price}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Status">
+                <th mat-header-cell *matHeaderCellDef>Status</th>
+                <td mat-cell *matCellDef="let element">{{element.status}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Action">
+                <th mat-header-cell *matHeaderCellDef style="width: 200px;">Action</th>
+                <td mat-cell *matCellDef="let element" style="color: #189ad6;">
+                    <p style="cursor: pointer;">
+                        <mat-icon style="font-size: 20px;">edit</mat-icon>
+                        <span>Edit</span>
+                    </p>
+                    <p style="cursor: pointer">
+                        <mat-icon style="font-size: 20px;">delete</mat-icon>
+                        <span>Delete</span>
+                    </p>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="nameColumn"></tr>
+            <tr mat-row *matRowDef="let row; columns: nameColumn"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+            aria-label="Select page of periodic elements">
+        </mat-paginator>
+    </div>
+</div>
