--- a/src/app/routes/admin-hrm/view-employee/view-employee.component.html
+++ b/src/app/routes/admin-hrm/view-employee/view-employee.component.html
@@ -8,7 +8,7 @@
             <mat-icon matPrefix>search</mat-icon>
             <input matInput type="search" placeholder="User Search" class="search-input">
         </mat-form-field>
-        <button mat-raised-button style="background-color: #189ad6;" color="primary">Search</button>
+        <button mat-raised-button style="background-color: #189ad6;" (click)="logout()" color="primary">Search</button>
     </div>
     <div class="table-div">
         <table mat-table [dataSource]="employees" class="mat-elevation-z8">
@@ -38,7 +38,7 @@
             </ng-container>
             <ng-container matColumnDef="Action">
                 <th mat-header-cell *matHeaderCellDef>Action</th>
-                <td mat-cell *matCellDef="let element" style="cursor: pointer;">
+                <td mat-cell *matCellDef="let element" style="cursor: pointer;" (click)="logout()">
                     <p style="color: #189ad6;">
                         <mat-icon style="font-size: 18px;">remove_red_eye</mat-icon>
                         <span>View</span>
