--- a/src/app/routes/select-role/select-role.component.html
+++ b/src/app/routes/select-role/select-role.component.html
@@ -7,7 +7,7 @@
     </div>
 </div>
 
-<div class="split right" routerLink="/car/list">
+<div class="split right" routerLink="/cpa/booking-office/list">
     <div class="centered">
         <!-- <img src="img_avatar.png" alt="Avatar man"> -->
         <mat-icon style="font-size: 100px; width: fit-content;">commute</mat-icon>
