--- a/src/app/routes/admin-carpark/booking-office-management/add-booking-office/add-booking-office.component.html
+++ b/src/app/routes/admin-carpark/booking-office-management/add-booking-office/add-booking-office.component.html
@@ -4,9 +4,10 @@
     </div>
     <hr />
     <div class="add-form">
-        <form [formGroup]="addBookingOfficeInformation" (ngSubmit)="addNewBookingOffice()">
+        <form [formGroup]="addBookingOfficeInformation">
             <div class="row">
-                <label class="col-25" style="font-weight: 600;">Booking office name <strong class="note">(*)</strong></label>
+                <label class="col-25" style="font-weight: 600;">Booking office name <strong
+                        class="note">(*)</strong></label>
                 <mat-form-field class="col-75" appearance="outline" style="width: 250px;">
                     <input matInput type="text" formControlName="bookingOfficeName" name="bookingOfficeName"
                         placeholder="Enter booking office name" />
@@ -15,12 +16,8 @@
             <div class="row">
                 <label class="col-25" style="font-weight: 600;">Trip <strong class="note">(*)</strong></label>
                 <mat-form-field class="col-75" appearance="outline" style="width: 250px;">
-                    <!-- <input matInput type="text" formControlName="fullName" name="password"
-                        placeholder="Enter full name" /> -->
-                    <mat-select placeholder="Select trip">
-                        <mat-option value="one">Gia Lai</mat-option>
-                        <mat-option value="two">Khanh Hoa</mat-option>
-                        <mat-option value="two">Nam Dinh</mat-option>
+                    <mat-select formControlName="trip" placeholder="Select trip">
+                        <div *ngFor="let trip of trips"><mat-option value="{{trip.tripId}}">{{trip.destination}}</mat-option></div>
                     </mat-select>
                 </mat-form-field>
             </div>
@@ -32,29 +29,43 @@
                 </mat-form-field>
             </div>
             <div class="row">
-                <label class="col-25" style="font-weight: 600;">Price <strong class="note">(*)</strong></label>
+                <label class="col-25" style="font-weight: 600;">Place <strong class="note">(*)</strong></label>
                 <mat-form-field class="col-75" appearance="outline" style="width: 250px;">
-                    <input matInput type="number" formControlName="price" name="price"
-                        placeholder="Enter price" />
+                    <mat-select formControlName="place" placeholder="Select place">
+                        <mat-option value="Quay 1">Quay 1</mat-option>
+                        <mat-option value="Quay 2">Quay 2</mat-option>
+                        <mat-option value="Quay 3">Quay 3</mat-option>
+                    </mat-select>
                 </mat-form-field>
-                <strong style="padding-left: 10px;">(VNĐ)</strong>
             </div>
             <div class="row">
-                <label class="col-25" style="font-weight: 600;">Contract deadline <strong class="note">(*)</strong></label>
-                <!-- <mat-form-field appearance="outline" style="width: 250px;">
-                    <mat-date-range-input [rangePicker]="picker">
-                      <input matStartDate placeholder="Start date">
-                      <input matEndDate placeholder="End date">
-                    </mat-date-range-input>
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-date-range-picker #picker></mat-date-range-picker>
-                  </mat-form-field> -->
+                <label class="col-25" style="font-weight: 600;">Price <strong class="note">(*)</strong></label>
+               <div class="col-75">
+                    <mat-form-field appearance="outline" style="width: 225px;">
+                        <input matInput type="number" formControlName="price" name="price" placeholder="Enter price" />
+                    </mat-form-field>
+                    <strong style="padding-left: 10px;">(VNĐ)</strong>
+               </div>
+            </div>
+            <div class="row">
+                <label class="col-25" style="font-weight: 600;">Contract deadline <strong
+                        class="note">(*)</strong></label>
+                <mat-form-field class="col-75" appearance="outline" style="width: 250px;">
+                    <input matInput type="date" formControlName="contractDeadlineStart" name="contractDeadlineStart"/>
+                </mat-form-field>
+            </div>
+            <div class="row">
+                <label class="col-25" style="font-weight: 600;"></label>
+                <mat-form-field class="col-75" appearance="outline" style="width: 250px;">
+                    <input matInput type="date" formControlName="contractDeadlineEnd" name="contractDeadlineEnd"/>
+                </mat-form-field>
             </div>
             <div class="button-action">
                 <button mat-raised-button style="background-color: #d68a18; margin-left: 15px;" color="primary">
                     <mat-icon style="font-size: 20px;">replay</mat-icon> Reset
                 </button>
-                <button mat-raised-button style="background-color: #14b938; margin-left: 15px;" color="primary">
+                <button mat-raised-button style="background-color: #14b938; margin-left: 15px;"
+                    (click)="addNewBookingOffice()" color="primary">
                     <mat-icon style="font-size: 20px;">add</mat-icon> Add
                 </button>
             </div>
