--- a/src/app/routes/admin-carpark/car-management/add-car/add-car.component.html
+++ b/src/app/routes/admin-carpark/car-management/add-car/add-car.component.html
@@ -2,9 +2,9 @@
     <div class="header-title">
         <h1>Add Car</h1>
     </div>
-    <hr/>
+    <hr />
     <div class="add-form">
-        <form [formGroup]="addCarInformation" (ngSubmit)="addNewCar()">
+        <form [formGroup]="addCarInformation">
             <div class="row">
                 <label class="col-25" style="font-weight: 600;">License plate <strong class="note">(*)</strong></label>
                 <mat-form-field class="col-75" appearance="outline" style="width: 250px;">
@@ -15,8 +15,7 @@
             <div class="row">
                 <label class="col-25" style="font-weight: 600;">Car type</label>
                 <mat-form-field class="col-75" appearance="outline" style="width: 250px;">
-                    <input matInput type="text" formControlName="carType" name="carType"
-                        placeholder="Enter car type" />
+                    <input matInput type="text" formControlName="carType" name="carType" placeholder="Enter car type" />
                 </mat-form-field>
             </div>
             <div class="row">
@@ -29,20 +28,20 @@
             <div class="row">
                 <label class="col-25" style="font-weight: 600;">Company <strong class="note">(*)</strong></label>
                 <mat-form-field class="col-75" appearance="outline" style="width: 250px;">
-                                    <mat-select placeholder="Select company">
-                        <mat-option value="one">Phương Trang</mat-option>
-                        <mat-option value="two">Cam Van</mat-option>
-                        <mat-option value="two">Hoang Long</mat-option>
+                    <mat-select formControlName="company" placeholder="Select company">
+                        <mat-option value="Phương Trang">Phương Trang</mat-option>
+                        <mat-option value="Cam Van">Cam Van</mat-option>
+                        <mat-option value="Hoang Long">Hoang Long</mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
             <div class="row">
                 <label class="col-25" style="font-weight: 600;">Parking lot <strong class="note">(*)</strong></label>
                 <mat-form-field class="col-75" appearance="outline" style="width: 250px;">
-                                    <mat-select placeholder="Select parking lot">
-                        <mat-option value="one">Bai so 1</mat-option>
-                        <mat-option value="two">Bai so 2</mat-option>
-                        <mat-option value="two">Bai so 3</mat-option>
+                    <mat-select formControlName="parkingLot" placeholder="Select parking lot">
+                        <div *ngFor="let parkinglot of parkinglots">
+                            <mat-option value={{parkinglot.parkId}}>{{parkinglot.parkName}}</mat-option>
+                        </div>
                     </mat-select>
                 </mat-form-field>
             </div>
@@ -50,7 +49,8 @@
                 <button mat-raised-button style="background-color: #d68a18; margin-left: 15px;" color="primary">
                     <mat-icon style="font-size: 20px;">replay</mat-icon> Reset
                 </button>
-                <button mat-raised-button style="background-color: #14b938; margin-left: 15px;" color="primary">
+                <button mat-raised-button style="background-color: #14b938; margin-left: 15px;" (click)="addNewCar()"
+                    color="primary">
                     <mat-icon style="font-size: 20px;">add</mat-icon> Add
                 </button>
             </div>
