--- a/src/app/routes/admin-carpark/car-management/car-list/car-list.component.html
+++ b/src/app/routes/admin-carpark/car-management/car-list/car-list.component.html
@@ -28,14 +28,16 @@
             <ng-container matColumnDef="Action">
                 <th mat-header-cell *matHeaderCellDef style="width: 200px;">Action</th>
                 <td mat-cell *matCellDef="let element" style="color: #189ad6;">
-                    <p style="cursor: pointer;">
-                        <mat-icon style="font-size: 20px;">edit</mat-icon>
-                        <span>Edit</span>
-                    </p>
-                    <p style="cursor: pointer">
-                        <mat-icon style="font-size: 20px;">delete</mat-icon>
-                        <span>Delete</span>
-                    </p>
+                   <div class="action">
+                        <p style="cursor: pointer; ">
+                            <mat-icon style="font-size: 20px;">edit</mat-icon>
+                            <span>Edit</span>
+                        </p>
+                        <p style="cursor: pointer; padding-left: 10px;">
+                            <mat-icon style="font-size: 20px;">delete</mat-icon>
+                            <span>Delete</span>
+                        </p>
+                   </div>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="nameColumn"></tr>
