--- a/src/app/routes/admin-carpark/parking-lot-management/parking-lot-list/parking-lot-list.component.html
+++ b/src/app/routes/admin-carpark/parking-lot-management/parking-lot-list/parking-lot-list.component.html
@@ -14,39 +14,41 @@
         <table mat-table [dataSource]="parks" class="mat-elevation-z8">
             <ng-container matColumnDef="ID">
                 <th mat-header-cell *matHeaderCellDef>ID</th>
-                <td mat-cell *matCellDef="let element">{{element.id}}</td>
+                <td mat-cell *matCellDef="let element">{{element.parkId}}</td>
             </ng-container>
             <ng-container matColumnDef="Parking lot">
                 <th mat-header-cell *matHeaderCellDef>Parking lot</th>
-                <td mat-cell *matCellDef="let element">{{element.parkingLot}}</td>
+                <td mat-cell *matCellDef="let element">{{element.parkName}}</td>
             </ng-container>
             <ng-container matColumnDef="Place">
                 <th mat-header-cell *matHeaderCellDef>Place</th>
-                <td mat-cell *matCellDef="let element">{{element.place}}</td>
+                <td mat-cell *matCellDef="let element">{{element.parkPlace}}</td>
             </ng-container>
             <ng-container matColumnDef="Area">
                 <th mat-header-cell *matHeaderCellDef>Area</th>
-                <td mat-cell *matCellDef="let element">{{element.area}}</td>
+                <td mat-cell *matCellDef="let element">{{element.parkArea}}</td>
             </ng-container>
             <ng-container matColumnDef="Price">
                 <th mat-header-cell *matHeaderCellDef>Price</th>
-                <td mat-cell *matCellDef="let element">{{element.price}}</td>
+                <td mat-cell *matCellDef="let element">{{element.parkPrice}}</td>
             </ng-container>
             <ng-container matColumnDef="Status">
                 <th mat-header-cell *matHeaderCellDef>Status</th>
-                <td mat-cell *matCellDef="let element">{{element.status}}</td>
+                <td mat-cell *matCellDef="let element">{{element.parkStatus}}</td>
             </ng-container>
             <ng-container matColumnDef="Action">
                 <th mat-header-cell *matHeaderCellDef style="width: 200px;">Action</th>
                 <td mat-cell *matCellDef="let element" style="color: #189ad6;">
-                    <p style="cursor: pointer;">
-                        <mat-icon style="font-size: 20px;">edit</mat-icon>
-                        <span>Edit</span>
-                    </p>
-                    <p style="cursor: pointer">
-                        <mat-icon style="font-size: 20px;">delete</mat-icon>
-                        <span>Delete</span>
-                    </p>
+                    <div class="action">
+                        <p style="cursor: pointer; ">
+                            <mat-icon style="font-size: 20px;">edit</mat-icon>
+                            <span>Edit</span>
+                        </p>
+                        <p style="cursor: pointer; padding-left: 10px;">
+                            <mat-icon style="font-size: 20px;">delete</mat-icon>
+                            <span>Delete</span>
+                        </p>
+                   </div>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="nameColumn"></tr>
