--- a/src/app/routes/admin-carpark/trip-management/trip-list/trip-list.component.html
+++ b/src/app/routes/admin-carpark/trip-management/trip-list/trip-list.component.html
@@ -1,1 +1,54 @@
-<p>trip-list works!</p>
+<div class="main-container">
+    <div class="header-title">
+        <h1>Trip list</h1>
+    </div>
+    <hr/>
+    <div class="table-div">
+        <table mat-table [dataSource]="trips" class="mat-elevation-z8">
+            <ng-container matColumnDef="No">
+                <th mat-header-cell *matHeaderCellDef>No</th>
+                <td mat-cell *matCellDef="let element">{{element.tripId}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Destination">
+                <th mat-header-cell *matHeaderCellDef>Destination</th>
+                <td mat-cell *matCellDef="let element">{{element.destination}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Departure time">
+                <th mat-header-cell *matHeaderCellDef>Departure time</th>
+                <td mat-cell *matCellDef="let element">{{element.departureTime}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Driver">
+                <th mat-header-cell *matHeaderCellDef>Driver</th>
+                <td mat-cell *matCellDef="let element">{{element.driven}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Car type">
+                <th mat-header-cell *matHeaderCellDef>Car type</th>
+                <td mat-cell *matCellDef="let element">{{element.carType}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Booked ticket number">
+                <th mat-header-cell *matHeaderCellDef>Booked ticket number</th>
+                <td mat-cell *matCellDef="let element">{{element.bookedTicketNumber}}</td>
+            </ng-container>
+            <ng-container matColumnDef="Action">
+                <th mat-header-cell *matHeaderCellDef style="width: 200px;">Action</th>
+                <td mat-cell *matCellDef="let element" style="color: #189ad6;">
+                    <div class="action">
+                        <p style="cursor: pointer; ">
+                            <mat-icon style="font-size: 20px;">edit</mat-icon>
+                            <span>Edit</span>
+                        </p>
+                        <p style="cursor: pointer; padding-left: 10px;">
+                            <mat-icon style="font-size: 20px;">delete</mat-icon>
+                            <span>Delete</span>
+                        </p>
+                   </div>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="nameColumn"></tr>
+            <tr mat-row *matRowDef="let row; columns: nameColumn"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+            aria-label="Select page of periodic elements">
+        </mat-paginator>
+    </div>
+</div>
