--- a/src/app/routes/admin-carpark/parking-lot-management/add-parking-lot/add-parking-lot.component.html
+++ b/src/app/routes/admin-carpark/parking-lot-management/add-parking-lot/add-parking-lot.component.html
@@ -38,7 +38,7 @@
                     <mat-form-field appearance="outline" style="width: 225px;">
                         <input matInput type="text" formControlName="price" name="price" placeholder="Enter price" />
                     </mat-form-field>
-                    <strong style="padding-left: 10px;">(m2)</strong>
+                    <strong style="padding-left: 10px;">(VND)</strong>
                 </div>
             </div>
             <div class="button-action">
